--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.7.0
   google_fonts: ^4.0.3
+  custom_navigation_bar: ^0.8.2
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
