--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^4.0.3
   custom_navigation_bar: ^0.8.2
   page_transition: ^2.0.9
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
