little changes in backgroud photo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - image/ticket.png
     - image/transfer.png
     - image/visa.png
+    - image/back_screen.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
