--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   page_transition: ^2.0.9
   intl: ^0.18.0
+  image_picker: ^0.8.7
 
 dev_dependencies:
   flutter_test:
