--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   page_transition: ^2.0.9
   intl: ^0.18.0
   image_picker: ^0.8.7
+  flutter_phone_direct_caller: ^2.1.1
 
 dev_dependencies:
   flutter_test:
