--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - image/back_screen.png
     - image/telegram.png
     - image/error_tranzaction.png
+    - image/registr_screen.png
     - image/icons/accaount.png
     - image/icons/call.png
     - image/icons/location.png
