--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.set_of_service_app">
    <application
-        android:label="set_of_service_app"
+        android:label="SOS"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
