New changes with splash screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - image/icons/accaount.png
     - image/icons/call.png
     - image/icons/location.png
+    - image/app/app_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
