--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
     - image/telegram.png
     - image/error_tranzaction.png
     - image/registr_screen.png
+    - image/samuray.png
     - image/icons/accaount.png
     - image/icons/call.png
     - image/icons/location.png
