Changes with currency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - image/error_tranzaction.png
     - image/registr_screen.png
     - image/samuray.png
+    - image/flag/euro.png
     - image/icons/accaount.png
     - image/icons/call.png
     - image/icons/location.png
