--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   country_icons: ^2.0.2
   country_flags: ^1.0.0
   country_picker: ^2.0.19
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.2.2
 
 dev_dependencies:
   flutter_test:
