New updates with air tickets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
     - image/telegram.png
     - image/error_tranzaction.png
     - image/registr_screen.png
+    - image/tickets.png
     - image/samuray.png
     - image/flag/euro.png
     - image/icons/accaount.png
