--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   firebase_auth: ^4.2.2
   device_info: ^2.0.3
   shared_preferences: ^2.1.0
+  flutter_local_notifications: ^14.0.0+1
+  timezone: ^0.9.2
+  rxdart: ^0.27.7
   
 
 dev_dependencies:
