--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   flutter_local_notifications: ^14.0.0+1
   timezone: ^0.9.2
   rxdart: ^0.27.7
-  carousel_pro: ^1.0.0
+  carousel_slider: ^4.2.1
   
 
 dev_dependencies:
