--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   timezone: ^0.9.2
   rxdart: ^0.27.7
   carousel_slider: ^4.2.1
+  lottie: ^1.4.3
   
 
 dev_dependencies:
@@ -106,7 +107,9 @@ flutter:
     - image/icons/accaount.png
     - image/icons/call.png
     - image/icons/location.png
+    - image/icons/auth_number.png
     - image/app/app_icon.png
+    - animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
