Beginning of identification page and we should add some properties

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,8 +108,7 @@ flutter:
     - image/icons/call.png
     - image/icons/location.png
     - image/app/app_icon.png
-    - animations/error.json
-    - animations/sms_animation.json
+    - animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
