--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   carousel_slider: ^4.2.1
   lottie: ^1.4.3
   flutter_bloc: ^8.1.2
+  animated_splash_screen: ^1.3.0
   
 
 dev_dependencies:
