--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   lottie: ^1.4.3
   flutter_bloc: ^8.1.2
   animated_splash_screen: ^1.3.0
+  flutter_image_compress: ^2.0.0
   
 
 dev_dependencies:
