--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   animated_splash_screen: ^1.3.0
   flutter_image_compress: ^2.0.0
+  awesome_dialog: ^3.1.0
   
 
 dev_dependencies:
