--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   flutter_image_compress: ^2.0.0
   awesome_dialog: ^3.1.0
+  device_info_plus: ^9.0.2
   
 
 dev_dependencies:
