Little adding program description to pubspec.yaml file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,15 @@
 name: set_of_service_app
-description: A new Flutter project.
+description: Set of Services is a unique app that provides a comprehensive range of essential services for Uzbeks living in Japan. This app is specifically tailored to the needs of Uzbeks, which sets it apart from other apps on the market.
+
+One of the key features of Set of Services is its visa services. Users can access visa application assistance, document preparation, and appointment scheduling, making it easier to stay compliant with local laws and regulations.
+
+The app also provides job listings that cater to Uzbeks' skill sets and expertise. Users can browse through a range of job postings from local businesses, making it easier to find employment opportunities in Japan.
+
+In addition to job listings, Set of Services includes home rental services, helping users find affordable and comfortable housing options. The app also offers food delivery services, allowing users to access a range of local restaurants and cuisines.
+
+Set of Services is built using Flutter, which makes it fast, responsive, and easy to use. The app has a sleek and modern design, with intuitive functionality that allows users to navigate through the different services with ease.
+
+Overall, Set of Services is a game-changer for Uzbeks living in Japan. Whether you're looking for visa services, job listings, home rentals, food delivery, or payment options, this app has it all. Try Set of Services today and see how it can make your life easier!
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -66,8 +76,6 @@ dependencies:
   device_info_plus: ^9.0.2
   image_cropper: ^4.0.1
   path_provider: ^2.0.15
-  
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
