--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   device_info_plus: ^9.0.2
   image_cropper: ^4.0.1
   path_provider: ^2.0.15
+  flutter_datetime_picker: ^1.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
