--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   image_cropper: ^4.0.1
   path_provider: ^2.0.15
   flutter_datetime_picker: ^1.5.1
+  dio: ^5.2.1+1
+  file_picker: ^5.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
