--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/service/
     - image/back_photo.png
     - image/Group.png
     - image/home.png
