--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
     - image/icons/call.png
     - image/icons/location.png
     - image/app/
+    - image/verification/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
