--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   dio: ^5.2.1+1
   file_picker: ^5.3.1
+  modal_progress_hud_nsn: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
