--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   dio: ^5.2.1+1
   file_picker: ^5.3.1
   modal_progress_hud_nsn: ^0.3.0
+  email_validator: ^2.1.17
 dev_dependencies:
   flutter_test:
     sdk: flutter
