--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   file_picker: ^5.3.1
   modal_progress_hud_nsn: ^0.3.0
   email_validator: ^2.1.17
+  custom_pop_up_menu: ^1.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
